# MinervaAIStudio

./: .gitignore  LICENSE  README.md  pyproject.toml
apolloai/: README.md  pyproject.toml
apolloai/src/apolloai/: app.py  llm.py
apolloai/src/apolloai/tools/: __init__.py  audio.py  general_purpose.py  images.py  threed.py  video.py
minervaai/: README.md  app.py  common.py  llm.py  pyproject.toml
minervaai/src/minervaai/: app.py  common.py  llm.py  utils.py
minervaai/src/minervaai/demo/: threedtest.py
minervaai/src/minervaai/tools/: __init__.py  audio.py  general_purpose.py  images.py  threed.py  video.py
minervaai/tools/: __init__.py  audio.py  images.py  threed.py  video.py
src/minervaai/: app.py  llm.py
src/minervaai/tools/: video.py
